Fix flexbox alignment in horizontal nav footer (#116)
* Fix h3 alignment in homepage header slider items to bottom-left

Removed top: 32px and unnecessary flex properties (display: flex,
align-content: end, align-self: end) so the h3 naturally positions
at the bottom-left of each slider item card.


* Use flex-end alignment for h3 in homepage header items

Restore flex layout with top constraint so two-line titles don't
overflow. Use align-items: flex-end instead of the previous
align-content/align-self which weren't working.


* Fix Safari compatibility for h3 bottom alignment

Use flex-direction: column with justify-content: flex-end instead of
align-items: flex-end, which Safari doesn't handle well on absolutely
positioned elements with implicit height.


---------

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1378,9 +1378,9 @@ body.horizontal-nav main {
         right: 32px;
         padding: 0;
         z-index: 5;
-        align-content: end;
         display: flex;
-        align-self: end;
+        flex-direction: column;
+        justify-content: flex-end;
       }
       p {
         text-align: right;
